objects/nDESIGN__Screen_Section__c.object
<CustomObject>
    <fields>
        <fullName>nDESIGN__Break_Page_After__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Forces a page break after the section when printing.</description>
        <inlineHelpText>Forces a page break after the section when printing.</inlineHelpText>
        <label>Break Page After</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nDESIGN__Break_Page_Before__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Forces a page break before the section when printing.</description>
        <inlineHelpText>Forces a page break before the section when printing.</inlineHelpText>
        <label>Break Page Before</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nDESIGN__Default_Editable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set to true if the section should be set to the editable view by default.</description>
        <label>Default Editable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nDESIGN__Default_Rendered__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set to true if the section is rendered by default.</description>
        <label>Default Rendered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nDESIGN__Disable_Print__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Print</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nDESIGN__Display_Order__c</fullName>
        <inlineHelpText>Use Increments of 10 for Non Headless Sections and Increments of 1 for Headless Sections. 
Example. Loan Detail DO:10 Loan Detail Narrative DO:11</inlineHelpText>
        <label>Display Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nDESIGN__Display_Toggle_Effect__c</fullName>
        <label>Display Toggle Effect</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>fade</fullName>
                </value>
                <value>
                    <fullName>slide</fullName>
                    <default>true</default>
                    <label>slide</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nDESIGN__Display_Toggle_Header__c</fullName>
        <defaultValue>true</defaultValue>
        <description>When Selected is allows the Header to be clicked to expand the section</description>
        <label>Display Toggle Header</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nDESIGN__Display_Toggle_Link__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When Selected it allows the show/hide link to appear to the right and once clicked it will expand the section.</description>
        <label>Display Toggle Link</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nDESIGN__Headless__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If set then the section will be rendered with no header and it will seem as if the section is part of the prior section.</description>
        <inlineHelpText>If set then the section will be rendered with no header and it will seem as if the section is part of the prior section. If used display order is Incremented as 1 instead of 10</inlineHelpText>
        <label>Headless</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nDESIGN__Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If the screen section is inactive it will not be displayed or copied when cloning the Screen.</description>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nDESIGN__Instructions_Text__c</fullName>
        <description>The instructions for the section</description>
        <inlineHelpText>Instructions will be visible on HTML View only will not show on Print or PDF view. Does render for headless sections</inlineHelpText>
        <label>Instructions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nDESIGN__Instructions__c</fullName>
        <description>Deprecated to Instructions_Text__c</description>
        <inlineHelpText>Deprecated to Instructions_Text__c</inlineHelpText>
        <label>-D Instructions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nDESIGN__Is_Editable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Editable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nDESIGN__Layout__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Layout</label>
        <referenceTo>nDESIGN__Layout__c</referenceTo>
        <relationshipLabel>Screen Sections</relationshipLabel>
        <relationshipName>Screen_Sections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nDESIGN__Rendered_View__c</fullName>
        <description>Contains HTML rendered view of the screen section with the latest values from the last time the screen section was loaded.</description>
        <label>Rendered View</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nDESIGN__Screen_View__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Screen View</label>
        <referenceTo>nDESIGN__View__c</referenceTo>
        <relationshipLabel>Screen Sections</relationshipLabel>
        <relationshipName>Screen_Sections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nDESIGN__Screen__c</fullName>
        <label>Screen</label>
        <referenceTo>nDESIGN__Screen__c</referenceTo>
        <relationshipLabel>Screen Sections</relationshipLabel>
        <relationshipName>Screen_Sections</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>nDESIGN__Section_Resource__c</fullName>
        <inlineHelpText>SObject is used for Widget usage expect for Approval history or when specified. MappedSobjectHierarchy is used for when you are accessing data from another object other than the Main object. Exp Get Fee Data from Loan. All other Types use MappedSobject.</inlineHelpText>
        <label>Section Resource</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SObjectScreenResource</fullName>
                </value>
                <value>
                    <fullName>MappedSObjectScreenResource</fullName>
                    <default>true</default>
                    <label>MappedSObjectScreenResource</label>
                </value>
                <value>
                    <fullName>MappedSObjectHierarchyScreenResource</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nDESIGN__Widget__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Widget</label>
        <referenceTo>nDESIGN__Widget__c</referenceTo>
        <relationshipLabel>Screen Sections</relationshipLabel>
        <relationshipName>Screen_Sections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nDESIGN__lookupKey__c</fullName>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>nDESIGN__sObject_Type__c</fullName>
        <inlineHelpText>Select The Object the Credit Memo is From.</inlineHelpText>
        <label>sObject Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>LLC_BI__Loan__c</fullName>
                </value>
                <value>
                    <fullName>LLC_BI__Product_Package__c</fullName>
                </value>
                <value>
                    <fullName>LLC_BI__Review__c</fullName>
                </value>
                <value>
                    <fullName>LLC_BI__Treasury_Service__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>-D Screen Section</label>
    <listViews>
        <fullName>nDESIGN__All</fullName>
        <columns>NAME</columns>
        <columns>nDESIGN__Screen__c</columns>
        <columns>nDESIGN__Headless__c</columns>
        <columns>nDESIGN__Display_Order__c</columns>
        <columns>nDESIGN__Instructions_Text__c</columns>
        <columns>nDESIGN__Screen_View__c</columns>
        <columns>nDESIGN__Section_Resource__c</columns>
        <columns>nDESIGN__sObject_Type__c</columns>
        <columns>nDESIGN__Layout__c</columns>
        <columns>nDESIGN__Widget__c</columns>
        <columns>nDESIGN__Is_Editable__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Screen Section Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>-D Screen Sections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>nDESIGN__Mandatory</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(TEXT(nDESIGN__Section_Resource__c) )</errorConditionFormula>
        <errorDisplayField>nDESIGN__Section_Resource__c</errorDisplayField>
        <errorMessage>Please select a section resource.</errorMessage>
    </validationRules>
</CustomObject>